[project]
name = "kern-ai"
version = "0.1.0"
description = "Agent framework optimized for small models — template-based structured output, JSON repair, and LaTeX protection."
requires-python = ">=3.11"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Satadeep Dasgupta" },
]
keywords = [
    "agent",
    "ai",
    "llm",
    "small-models",
    "structured-output",
]
classifiers = [
    "Intended Audience :: Developers",
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "docstring-parser",
    "gitpython",
    "h11>=0.16.0",
    "httpx[http2]",
    "json-repair>=0.30.0",
    "packaging",
    "pydantic",
    "pydantic-settings",
    "python-dotenv",
    "python-multipart",
    "pyyaml",
    "rich",
    "typer",
    "typing-extensions",
]

[project.optional-dependencies]
dev = [
    "mypy",
    "ruff",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-mock",
    "timeout-decorator",
    "types-pyyaml",
    "types-aiofiles",
    "fastapi",
    "uvicorn",
    "PyJWT",
    "mcp",
    "openai",
]

# --- Core extras (most commonly used) ---

os = ["fastapi[standard]", "uvicorn", "sqlalchemy", "PyJWT", "opentelemetry-sdk", "openinference-instrumentation-agno", "croniter>=1.3", "pytz>=2023.3"]
scheduler = ["croniter>=1.3", "pytz>=2023.3"]

# Telemetry
opentelemetry = ["opentelemetry-sdk", "opentelemetry-exporter-otlp"]

# Models
anthropic = ["anthropic"]
azure = ["azure-ai-inference", "aiohttp"]
cerebras = ["cerebras-cloud-sdk"]
cohere = ["cohere"]
google = ["google-genai>=1.52.0"]
groq = ["groq"]
ibm = ["ibm-watsonx-ai"]
litellm = ["litellm"]
mistral = ["mistralai"]
ollama = ["ollama"]
openai = ["openai"]

# Token Counting
tokenizers = ["tiktoken", "tokenizers"]

# Tools
ddg = ["ddgs"]
exa = ["exa_py>=2.0.0"]
firecrawl = ["firecrawl-py"]
tavily = ["tavily-python"]
github = ["PyGithub"]
mcp = ["mcp>=1.9.2"]
yfinance = ["yfinance"]
youtube = ["youtube_transcript_api"]
newspaper = ["newspaper4k", "lxml_html_clean"]
matplotlib = ["matplotlib"]
browserbase = ["browserbase", "playwright"]

# Storage
sql = ["sqlalchemy"]
postgres = ["psycopg-binary"]
sqlite = ["sqlalchemy", "aiosqlite"]
redis = ["redis", "redisvl>=0.12.1"]
mongo = ["pymongo>=4.9", "motor"]

# Vector databases
pgvector = ["pgvector"]
chromadb = ["chromadb"]
lancedb = ["lancedb>=0.26.0", "tantivy"]
qdrant = ["qdrant-client"]
milvusdb = ["pymilvus>=2.5.10"]
pinecone = ["pinecone"]

# Knowledge
pdf = ["pypdf", "rapidocr_onnxruntime"]
docx = ["python-docx"]
csv = ["aiofiles"]
markdown = ["unstructured", "markdown", "aiofiles"]

# --- Bundle extras ---

models = [
    "kern-ai[anthropic]",
    "kern-ai[azure]",
    "kern-ai[cerebras]",
    "kern-ai[cohere]",
    "kern-ai[google]",
    "kern-ai[groq]",
    "kern-ai[ibm]",
    "kern-ai[mistral]",
    "kern-ai[ollama]",
    "kern-ai[openai]",
]

tools = [
    "kern-ai[ddg]",
    "kern-ai[exa]",
    "kern-ai[firecrawl]",
    "kern-ai[tavily]",
    "kern-ai[github]",
    "kern-ai[mcp]",
    "kern-ai[yfinance]",
    "kern-ai[youtube]",
    "kern-ai[newspaper]",
    "kern-ai[matplotlib]",
    "kern-ai[browserbase]",
]

storage = [
    "kern-ai[sql]",
    "kern-ai[postgres]",
    "kern-ai[sqlite]",
    "kern-ai[redis]",
    "kern-ai[mongo]",
]

vectordbs = [
    "kern-ai[pgvector]",
    "kern-ai[chromadb]",
    "kern-ai[lancedb]",
    "kern-ai[qdrant]",
    "kern-ai[milvusdb]",
    "kern-ai[pinecone]",
]

knowledge = [
    "kern-ai[pdf]",
    "kern-ai[docx]",
    "kern-ai[csv]",
    "kern-ai[markdown]",
]

all = [
    "kern-ai[models]",
    "kern-ai[tools]",
    "kern-ai[storage]",
    "kern-ai[vectordbs]",
    "kern-ai[knowledge]",
    "kern-ai[opentelemetry]",
]

[project.urls]
Homepage = "https://github.com/ndxrocks/kern"
Repository = "https://github.com/ndxrocks/kern"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["kern*"]

[tool.setuptools.package-data]
kern = ["py.typed"]

[tool.pytest.ini_options]
log_cli = true
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
check_untyped_defs = true
no_implicit_optional = true
warn_unused_configs = true
disable_error_code = ["override"]
plugins = ["pydantic.mypy"]
exclude = ["tests*"]
